--- a/Bento_POS/Bento POS.vbproj
+++ b/Bento_POS/Bento POS.vbproj
@@ -95,6 +95,12 @@
       <DependentUpon>CustomerForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="databaseTest.Designer.vb">
+      <DependentUpon>databaseTest.vb</DependentUpon>
+    </Compile>
+    <Compile Include="databaseTest.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DBAccess.vb" />
     <Compile Include="Ordering_Type.Designer.vb">
       <DependentUpon>Ordering_Type.vb</DependentUpon>
@@ -128,6 +134,9 @@
   <ItemGroup>
     <EmbeddedResource Include="CustomerForm.resx">
       <DependentUpon>CustomerForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="databaseTest.resx">
+      <DependentUpon>databaseTest.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ordering_Type.resx">
       <DependentUpon>Ordering_Type.vb</DependentUpon>
