--- a/Bento_POS/Bento POS.vbproj
+++ b/Bento_POS/Bento POS.vbproj
@@ -96,6 +96,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DBAccess.vb" />
+    <Compile Include="Order_Payment.Designer.vb">
+      <DependentUpon>Order_Payment.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Order_Payment.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="PublicVars.vb" />
     <Compile Include="Ordering_Type.Designer.vb">
       <DependentUpon>Ordering_Type.vb</DependentUpon>
@@ -151,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Order_Discount.resx">
       <DependentUpon>Order_Discount.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Order_Payment.resx">
+      <DependentUpon>Order_Payment.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
